--- a/src/lib/libscope/Makefile.in
+++ b/src/lib/libscope/Makefile.in
@@ -13,7 +13,7 @@
 
 
 #
-#  Copyright (c) 2007 Adam Wolbach
+#  Copyright (c) 2007 Carnegie Mellon University
 #
 #  This software is distributed under the terms of the Eclipse Public
 #  License, Version 1.0 which can be found in the file named LICENSE.
