--- a/src/adiskd/Makefile.in
+++ b/src/adiskd/Makefile.in
@@ -19,7 +19,7 @@ OBJROOT = @OBJROOT@
 LIBS += -ldl  -lpthread -lfilterexec -lfl -Wl,-whole-archive 
 LIBS += -lfilter -llog -lodisk -Wl,-no-whole-archive
 LIBS += -lsstub -ltools -ldctl -lm -lssl -lcrypto -ldconfig
-LIBS += -lglib-2.0
+LIBS += -lauth -lkrb5 -lglib-2.0
 
 SRCS = adiskd.c search_state.c background.c
 OBJS = adiskd.o search_state.o background.o
