changes to authentication, accomodate Heimdal.

--- a/src/lib/libauth/Makefile.in
+++ b/src/lib/libauth/Makefile.in
@@ -16,6 +16,8 @@ SRCDIR = @srcdir@
 VPATH = @srcdir@
 OBJROOT = @OBJROOT@
 
+CFLAGS += -I$(ROOTDIR)
+
 LIBOBJS = lib_auth.o
 
 LIBS += -lkrb5 -llog -lpthread
