--- a/src/configure.in
+++ b/src/configure.in
@@ -17,8 +17,6 @@ CFLAGS="${CFLAGS} -m32 -Wall -D_GNU_SOURCE -D_REENTRANT -D_THREAD_SAFE -fPIC -We
 
 
 # Checks for libraries.
-#AC_CHECK_LIB([crypto], [main], , 
-	#[AC_MSG_ERROR(Unable to find libcrypto)])
 AC_CHECK_LIB([dl], [main], , 
 	[AC_MSG_ERROR(Unable to find libdl)])
 AC_CHECK_LIB([fl], [main], ,
@@ -29,7 +27,17 @@ AC_CHECK_LIB([pthread], [main], ,
 	[AC_MSG_ERROR(Unable to find libpthread)])
 #AC_CHECK_LIB([ssl], [main], ,
 	#[AC_MSG_ERROR(Unable to find libssl)])
+AC_CHECK_LIB([krb5], [main], , 
+	[AC_MSG_ERROR(Unable to find libkrb5)])
 
+# checks for kerberos - is this MIT or Heimdal?
+MITKRB5="no"
+AC_SEARCH_LIBS(krb5_encrypt, k5crypto, [MITKRB5="yes"])
+if test "$MITKRB5" = yes ; then    
+	AC_DEFINE(HAVE_KRB5, 1, [Define if kerberos 5 is available])
+else 
+    AC_DEFINE(HAVE_HEIMDAL, 1, [Define if using heimdal as kerberos5 library])
+fi
 
 OBJROOT=`pwd`
 AC_SUBST(OBJROOT)
@@ -54,6 +62,7 @@ AC_HEADER_DIRENT
 AC_HEADER_STDC
 AC_HEADER_SYS_WAIT
 AC_CHECK_HEADERS([arpa/inet.h fcntl.h limits.h netdb.h netinet/in.h stddef.h stdint.h stdlib.h string.h sys/file.h sys/socket.h sys/time.h unistd.h values.h])
+AC_CHECK_HEADERS(krb5.h)
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_HEADER_STDBOOL
