added cache tools

--- a/src/tools/Makefile.in
+++ b/src/tools/Makefile.in
@@ -17,8 +17,8 @@ VPATH = @srcdir@
 OBJROOT = @OBJROOT@
 
 
-SUBDIRS = delattr initattr setattr showattr dlog dctl showgid 
-SUBDIRS += rem_group slowdown rand_idx
+SUBDIRS = delattr initattr setattr showattr dctl showgid 
+SUBDIRS += rem_group slowdown rand_idx dlog cache
 
 
 include $(OBJROOT)/Makefile.template
