--- a/src/configure.in
+++ b/src/configure.in
@@ -128,6 +128,7 @@ AC_CONFIG_FILES([Makefile
                  target/include/Makefile
                  target/lib/Makefile
                  tools/Makefile
+                 tools/cache/Makefile
                  tools/dctl/Makefile
                  tools/delattr/Makefile
                  tools/dlog/Makefile
