--- a/src/lib/libtools/Makefile.in
+++ b/src/lib/libtools/Makefile.in
@@ -21,15 +21,17 @@ OBJROOT = @OBJROOT@
 
 LIBOBJS += ring.o rtimer_std.o rtimer.o sig_calc.o
 LIBOBJS += rstat.o rgraph.o rcomb.o user.o file_tools.o
+LIBOBJS += ports.o
 
 LIBSRCS += ring.c rtimer_std.c rtimer.c  sig_calc.c
 LIBSRCS += rstat.c rgraph.c rcomb.c user.c file_tools.c
+LIBSRCS += ports.c
 
 TESTOBJS = test_ring.o
 TESTSRCS = test_ring.c
 
 SHARED_HEADERS = ring.h lib_tools.h queue.h sig_calc.h 
-SHARED_HEADERS += rtimer.h rcomb.h rgraph.h rstat.h
+SHARED_HEADERS += rtimer.h rcomb.h rgraph.h rstat.h ports.h
 
 SRCS = $(LIBSRCS) $(TESTSRCS) 
 OBJS = $(LIBOBJS) $(TESTOBJS) 
