--- a/src/tools/setattr/Makefile.in
+++ b/src/tools/setattr/Makefile.in
@@ -17,7 +17,8 @@ VPATH = @srcdir@
 OBJROOT = @OBJROOT@
 
 
-LIBS += -lodisk -ltools -lpthread -llog -ldctl -lssl -lcrypto -ldconfig
+LIBS += -lodisk -ltools -lpthread -llog -ldctl -lssl -lcrypto 
+LIBS += -ldconfig -lglib-2.0
 
 #
 # Compilation Targets
