--- a/src/configure.ac
+++ b/src/configure.ac
@@ -11,6 +11,7 @@
 #
 
 AC_INIT([opendiamond], [2.0.2], [diamond@cs.cmu.edu])
+AC_PREREQ([2.59])
 AC_CONFIG_SRCDIR([config.h.in])
 AM_INIT_AUTOMAKE(foreign)
 AC_CONFIG_HEADERS([config.h])
