--- a/src/configure.ac
+++ b/src/configure.ac
@@ -13,7 +13,7 @@
 AC_INIT([opendiamond], [2.0.2], [diamond@cs.cmu.edu])
 AC_PREREQ([2.59])
 AC_CONFIG_SRCDIR([config.h.in])
-AM_INIT_AUTOMAKE(foreign)
+AM_INIT_AUTOMAKE([foreign 1.9])
 AC_CONFIG_HEADERS([config.h])
 AM_MAINTAINER_MODE
 
