--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,7 @@
 SUBDIRS = common lib adiskd tools target debian swig
 
 
-EXTRA_DIST = CREDITS
+EXTRA_DIST = CREDITS LICENSE INSTALL
 
 
 pkgconfigdir = $(libdir)/pkgconfig
