changes for logging, instrumentation

--- a/src/lib/libauth/Makefile.am
+++ b/src/lib/libauth/Makefile.am
@@ -4,11 +4,17 @@ libauth_la_SOURCES = lib_auth.c lib_auth_priv.h
 
 pkginclude_HEADERS = lib_auth.h
 
+CFLAGS += ${GLIB2_CFLAGS}
 
 noinst_PROGRAMS = actest astest
 
 actest_SOURCES = actest.c
-actest_LDADD = libauth.la ../liblog/liblog.la
+actest_LDADD = libauth.la ../liblog/liblog.la \
+	../libdctl/libdctl.la ../libdconfig/libdconfig.la \
+	${GLIB2_LIBS}
 
 astest_SOURCES = astest.c
-astest_LDADD = libauth.la ../liblog/liblog.la
+astest_LDADD = libauth.la ../liblog/liblog.la \
+	../libdctl/libdctl.la ../libdconfig/libdconfig.la \
+	${GLIB2_LIBS}
+
