--- a/src/lib/liblog/Makefile.am
+++ b/src/lib/liblog/Makefile.am
@@ -4,8 +4,10 @@ liblog_la_SOURCES = lib_log.c
 
 pkginclude_HEADERS = lib_log.h
 
+CFLAGS += ${GLIB2_CFLAGS}
 
 noinst_PROGRAMS = test_log
 
 test_log_SOURCES = test_log.c
-test_log_LDADD = liblog.la
+test_log_LDADD = liblog.la ../libdconfig/libdconfig.la \
+	../libdctl/libdctl.la ${GLIB2_LIBS}
