--- a/src/lib/transport/socket/storagestub/Makefile.am
+++ b/src/lib/transport/socket/storagestub/Makefile.am
@@ -1,6 +1,6 @@
 noinst_LTLIBRARIES = libstoragestub.la
 
 libstoragestub_la_SOURCES = sstub_api.c sstub_cntrl.c sstub_conn.c \
-	sstub_data.c sstub_listen.c sstub_log.c sstub_impl.h
+	sstub_data.c sstub_listen.c sstub_impl.h
 
 pkginclude_HEADERS = lib_sstub.h
