--- a/src/lib/libod/Makefile.am
+++ b/src/lib/libod/Makefile.am
@@ -3,6 +3,7 @@ noinst_LTLIBRARIES = libod.la
 libod_la_SOURCES = od_api.c od_lookup.c od_clnt.c od_xdr.c od_priv.h \
 	 od.x.in lib_od.h.in
 
+CFLAGS += ${GLIB2_CFLAGS}
 
 noinst_PROGRAMS = od_server otest apitest
 
@@ -11,13 +12,16 @@ BUILT_SOURCES = od_clnt.c od_xdr.c od.h od_svc.c
 od_server_SOURCES = od_svc.c od_server.c
 od_server_LDADD = libod.la ../liblog/liblog.la ../libdctl/libdctl.la \
 	../libodisk/libodisk.la ../libdconfig/libdconfig.la \
-	../libtools/libtools.la ../libdctl/libdctl.la
+	../libtools/libtools.la ../libdctl/libdctl.la \
+	${GLIB2_LIBS}
 
 otest_SOURCES = otest.c
-otest_LDADD = libod.la ../libdconfig/libdconfig.la
+otest_LDADD = libod.la ../libdconfig/libdconfig.la \
+	${GLIB2_LIBS}
 
 apitest_SOURCES = apitest.c
-apitest_LDADD = libod.la ../libdconfig/libdconfig.la
+apitest_LDADD = libod.la ../libdconfig/libdconfig.la \
+	${GLIB2_LIBS}
 
 
 # rpcgen stuff (includes hack for rpcgen's interesting behavior with paths)
