--- a/src/lib/transport/socket/hoststub/Makefile.am
+++ b/src/lib/transport/socket/hoststub/Makefile.am
@@ -1,6 +1,6 @@
 noinst_LTLIBRARIES = libhoststub.la
 
-libhoststub_la_SOURCES = hstub_api.c  hstub_log.c hstub_cntrl.c hstub_data.c \
+libhoststub_la_SOURCES = hstub_api.c hstub_cntrl.c hstub_data.c \
 	hstub_main.c hstub_socket.c hstub_impl.h
 
 pkginclude_HEADERS = lib_hstub.h
