Makefile edits; all compile errors fixed rpcgen updates

--- a/src/lib/transport/socket/common/Makefile.am
+++ b/src/lib/transport/socket/common/Makefile.am
@@ -1,1 +1,27 @@
+noinst_LTLIBRARIES = libdiamondrpc.la
+
+BUILT_SOURCES = rpc_interface_clnt.c rpc_interface_xdr.c \
+	rpc_interface.h rpc_interface_svc.c
+
+libdiamondrpc_la_SOURCES = rpc_interface_xdr.c rpc_interface_svc.c \
+	rpc_interface_clnt.c
+
+AM_CPPFLAGS += -I/usr/include/tirpc -include xdr_shim.h
+libdiamondrpc_la_LIBADD = -ltirpc
+
 pkginclude_HEADERS = socket_trans.h
+
+CLEANFILES = rpc_interface_clnt.c rpc_interface_xdr.c rpc_interface.h \
+	rpc_interface_svc.c
+
+rpc_interface_xdr.c:
+	rpcgen -N -C -c -o rpc_interface_xdr.c rpc_interface.x
+
+rpc_interface.h:
+	rpcgen -N -C -h -o rpc_interface.h rpc_interface.x
+
+rpc_interface_svc.c:
+	rpcgen -N -C -m -o rpc_interface_svc.c rpc_interface.x
+
+rpc_interface_clnt.c:
+	rpcgen -N -C -l -o rpc_interface_clnt.c rpc_interface.x
