--- a/src/lib/transport/socket/Makefile.am
+++ b/src/lib/transport/socket/Makefile.am
@@ -3,4 +3,4 @@ SUBDIRS = common storagestub hoststub
 noinst_LTLIBRARIES = libsocket.la
 
 libsocket_la_SOURCES =
-libsocket_la_LIBADD = storagestub/libstoragestub.la hoststub/libhoststub.la
+libsocket_la_LIBADD = common/libdiamondrpc.la storagestub/libstoragestub.la hoststub/libhoststub.la
