rpcgen fixes to build opendiamond outside of the source directory

--- a/src/lib/transport/socket/common/Makefile.am
+++ b/src/lib/transport/socket/common/Makefile.am
@@ -12,16 +12,19 @@ libdiamondrpc_la_LIBADD = -ltirpc
 pkginclude_HEADERS = socket_trans.h
 
 CLEANFILES = rpc_interface_clnt.c rpc_interface_xdr.c rpc_interface.h \
-	rpc_interface_svc.c
+	rpc_interface_svc.c rpc_interface.x
 
-rpc_interface_xdr.c:
+rpc_interface_xdr.c: rpc_interface.x
 	rpcgen -N -C -c -o rpc_interface_xdr.c rpc_interface.x
 
-rpc_interface.h:
+rpc_interface.h: rpc_interface.x
 	rpcgen -N -C -h -o rpc_interface.h rpc_interface.x
 
-rpc_interface_svc.c:
+rpc_interface_svc.c: rpc_interface.x
 	rpcgen -N -C -m -o rpc_interface_svc.c rpc_interface.x
 
-rpc_interface_clnt.c:
+rpc_interface_clnt.c: rpc_interface.x
 	rpcgen -N -C -l -o rpc_interface_clnt.c rpc_interface.x
+
+rpc_interface.x: rpc_interface.x.in
+	cp $< $@
