--- a/src/lib/transport/socket/common/rpc_client_content.x.in
+++ b/src/lib/transport/socket/common/rpc_client_content.x.in
@@ -11,26 +11,7 @@
  *  RECIPIENT'S ACCEPTANCE OF THIS AGREEMENT
  */
 
-
-enum diamond_service_error_t {
-  /* Sun RPC failure codes should be subsumed here. */
-  DIAMOND_SUCCESS = 0,
-  DIAMOND_FAILEDSYSCALL,
-  DIAMOND_NOMEM,
-  DIAMOND_OPERR,
-  DIAMOND_FAILURE
-};
-
-enum diamond_opcode_error_t {
-  DIAMOND_OPCODE_SUCCESS = 0,
-  DIAMOND_OPCODE_FCACHEMISS,
-  DIAMOND_OPCODE_FAILURE
-};
-
-struct diamond_rc_t {
-  diamond_service_error_t service_err;
-  diamond_opcode_error_t  opcode_err;
-};
+#include "rpc_preamble.x"
 
 struct stop_x {
   int host_objs_received;
