changes to Makefile.am to remove duplicate XDR functions using perl
Each of the *_xdr.c file was receiving functions to parse the definitions
in rpc_preamble.x, which led to linker problems when the function names
were resolved.

--- a/src/lib/transport/socket/common/rpc_preamble.x.in
+++ b/src/lib/transport/socket/common/rpc_preamble.x.in
@@ -23,6 +23,15 @@
 %#define _RPCPREAMBLE_
 #endif RPC_HDR
 
+/* This is a label put in the generated code to indicate 
+ * the beginning of the xdr routines.  Used to strip out
+ * duplicate xdr function definition caused by
+ * #include "rpc_preamble.x" */
+
+enum begin_preamble {
+	JUNK=0
+};
+
 enum diamond_service_error_t {
   /* Sun RPC failure codes should be subsumed here. */
   DIAMOND_SUCCESS = 0,
@@ -41,6 +50,14 @@ enum diamond_opcode_error_t {
 struct diamond_rc_t {
   diamond_service_error_t service_err;
   diamond_opcode_error_t  opcode_err;
+};
+
+
+/* This must always be the very last definition in this file 
+ * for sed to work correctly. */
+
+enum end_preamble {
+	ENDJUNK=0
 };
 
 #ifdef RPC_HDR
