Added potemkin tool (beta)
The potemkin tool was added to the source tree, which simulates
a diamond client by setting up control and data connections to
adiskd and making TI-RPC calls simulating an actual run.

--- a/src/configure.ac
+++ b/src/configure.ac
@@ -102,6 +102,7 @@ tools/dctl/Makefile
 tools/delattr/Makefile
 tools/dlog/Makefile
 tools/initattr/Makefile
+tools/potemkin/Makefile
 tools/rand_idx/Makefile
 tools/rem_group/Makefile
 tools/setattr/Makefile
