--- a/src/lib/transport/socket/common/rpc_preamble.x.in
+++ b/src/lib/transport/socket/common/rpc_preamble.x.in
@@ -21,7 +21,7 @@
 #ifdef RPC_HDR
 %#ifndef _RPCPREAMBLE_
 %#define _RPCPREAMBLE_
-#endif RPC_HDR
+#endif /* RPC_HDR */
 
 /* This is a label put in the generated code to indicate 
  * the beginning of the xdr routines.  Used to strip out
@@ -62,4 +62,4 @@ enum end_preamble {
 
 #ifdef RPC_HDR
 %#endif  /* _RPCPREAMBLE_ */
-#endif RPC_HDR
+#endif /* RPC_HDR */
