--- a/src/tools/Makefile.am
+++ b/src/tools/Makefile.am
@@ -1,2 +1,2 @@
-SUBDIRS = dctl delattr initattr rand_idx rem_group \
+SUBDIRS = dctl delattr initattr potemkin rand_idx rem_group \
 	setattr showattr showgid slowdown
