Server tunneling code appears to work with patched TI-RPC library. Issues with RPC program registration remain.
This code compiles.  Many of the problems of the server-side
tunneling mechanism were solved in sstub_cntrl.c and sstub_conn.c.
Additionally, readn and writen were moved to a new common file,
socket_trans.h.  Potemkin was updated to use the hoststub interface.
Connection establishment appears to work flawlessly now, however
this uses the broken svc_run() in libtirpc and needs to be changed
to its own handler routine.

--- a/src/lib/transport/socket/common/Makefile.am
+++ b/src/lib/transport/socket/common/Makefile.am
@@ -15,7 +15,7 @@ libdiamondrpc_la_SOURCES = rpc_client_content_svc.c rpc_client_scope_svc.c \
 		 rpc_client_content_xdr.c rpc_client_scope_xdr.c \
 		 rpc_content_scope_xdr.c rpc_scope_scope_xdr.c \
 		 rpc_admin_content_xdr.c rpc_admin_scope_xdr.c \
-		 rpc_preamble_xdr.c
+		 rpc_preamble_xdr.c socket_trans.c
 
 AM_CPPFLAGS += -I/usr/include/tirpc -include xdr_shim.h
 libdiamondrpc_la_LIBADD = -ltirpc
