Fixed thread exiting bug
Threads were exiting from a misinterpretation of a failure code from
"request statistics" calls.  The call returns failure if no search
is currently running to request statistics about.  Unfortunately,
there is no easy way for adiskd to indicate to the storagestub library
that this specifically took place and another error did not occur, since
it returns a pointer to stats or NULL.  A new error code was added
to symbolize this opcode-specific error, but for now all errors coming from
adiskd use this new error code until the storagestub/adiskd interface
is changed.

--- a/src/lib/transport/socket/common/rpc_preamble.x.in
+++ b/src/lib/transport/socket/common/rpc_preamble.x.in
@@ -43,6 +43,7 @@ enum diamond_service_error_t {
 enum diamond_opcode_error_t {
   DIAMOND_OPCODE_SUCCESS = 0,
   DIAMOND_OPCODE_FCACHEMISS,
+  DIAMOND_OPCODE_NOSTATSAVAIL,
   DIAMOND_OPCODE_FAILURE
 };
 
