Fix automake files to pass "make distcheck"
Sorry we have to remove the cleverness for now with
RPCROOTS etc, but automake doesn't seem to like
any sort of automation inside it. (Perhaps some
m4 would work.)

--- a/src/lib/transport/socket/storagestub/Makefile.am
+++ b/src/lib/transport/socket/storagestub/Makefile.am
@@ -1,9 +1,7 @@
 noinst_LTLIBRARIES = libstoragestub.la
 
 libstoragestub_la_SOURCES = sstub_api.c sstub_cntrl.c sstub_conn.c \
-	sstub_data.c sstub_listen.c sstub_impl.h sstub_tirpc.c \
-	$(top_builddir)/lib/transport/socket/common/rpc_client_content.h \
-	$(top_builddir)/lib/transport/socket/common/xdr_shim.h
+	sstub_data.c sstub_listen.c sstub_impl.h sstub_tirpc.c
 
 AM_CPPFLAGS += -I/usr/include/tirpc -I$(top_builddir)/lib/transport/socket/common
 
