Include nodist targets in libod

--- a/src/lib/libod/Makefile.am
+++ b/src/lib/libod/Makefile.am
@@ -1,7 +1,7 @@
 noinst_LTLIBRARIES = libod.la
 
-libod_la_SOURCES = od_api.c od_lookup.c od_clnt.c od_xdr.c od_priv.h \
-	 od.x.in lib_od.h.in
+nodist_libod_la_SOURCES = od_clnt.c od_xdr.c
+libod_la_SOURCES = od_api.c od_lookup.c od_priv.h od.x.in lib_od.h.in
 
 CFLAGS += ${GLIB2_CFLAGS}
 
@@ -9,7 +9,8 @@ noinst_PROGRAMS = od_server otest apitest
 
 BUILT_SOURCES = od_clnt.c od_xdr.c od.h od_svc.c
 
-od_server_SOURCES = od_svc.c od_server.c
+nodist_od_server_SOURCES = od_svc.c
+od_server_SOURCES = od_server.c
 od_server_LDADD = libod.la ../liblog/liblog.la ../libdctl/libdctl.la \
 	../libodisk/libodisk.la ../libdconfig/libdconfig.la \
 	../libtools/libtools.la ../libdctl/libdctl.la \
