--- a/src/lib/transport/socket/common/rpc_client_content.x.in
+++ b/src/lib/transport/socket/common/rpc_client_content.x.in
@@ -93,9 +93,10 @@ struct dctl_return_x {
   dctl_x dctl;
 };
 
-struct diamond_session_variables_x {
-  opaque name<>;
-  double value<>;
+struct diamond_session_var_list_x {
+  string name<>;
+  double value;
+  diamond_session_var_list_x *next;
 };
 
 program CLIENTCONTENT_PROG {
@@ -134,7 +135,7 @@ program CLIENTCONTENT_PROG {
     diamond_rc_t device_set_obj_x(unsigned int gen, sig_val_x) = 16;
     diamond_rc_t device_send_obj_x(unsigned int gen, send_obj_x) = 17;
 
-    diamond_session_variables_x
+    diamond_session_var_list_x
       session_variables_get_x(unsigned int gen) = 18;
 
   } = 2;
