--- a/src/adiskd/Makefile.am
+++ b/src/adiskd/Makefile.am
@@ -1,6 +1,8 @@
 bin_PROGRAMS = adiskd
 
+CFLAGS += ${GLIB2_CFLAGS}
+
 adiskd_SOURCES = \
 	adiskd.c search_state.c background.c search_state.h
 
-adiskd_LDADD = $(top_builddir)/lib/libopendiamond.la
+adiskd_LDADD = $(top_builddir)/lib/libopendiamond.la ${GLIB2_LIBS}
