--- a/src/lib/transport/socket/hoststub/Makefile.am
+++ b/src/lib/transport/socket/hoststub/Makefile.am
@@ -5,4 +5,4 @@ libhoststub_la_SOURCES = hstub_api.c hstub_cntrl.c hstub_data.c \
 
 pkginclude_HEADERS = lib_hstub.h
 
-AM_CPPFLAGS += -I/usr/include/tirpc -I$(top_builddir)/lib/transport/socket/common
+AM_CPPFLAGS += -I$(top_builddir)/lib/transport/socket/common
