Initial release of volcano tool
The volcano tool now compiles and runs, generating a script
to distribute files and also two SQLite databases which
contain information about object creation and distribution.

--- a/src/configure.ac
+++ b/src/configure.ac
@@ -107,6 +107,7 @@ tools/setattr/Makefile
 tools/showattr/Makefile
 tools/showgid/Makefile
 tools/slowdown/Makefile
+tools/volcano/Makefile
 debian/Makefile
 target/Makefile
 target/bin/Makefile
