Changed gatekeeper to new style of output file
Gatekeeper now outputs a file containing the name_map and gid_map
concatenated, with numbers before each indicating the number of
lines in each file.  This is meant to be interpreted by a script
on the client which rewrites the appropriate name and gid maps.

--- a/src/gatekeeper/.htaccess
+++ b/src/gatekeeper/.htaccess
@@ -4,8 +4,7 @@
     Satisfy All
 </Files>
 
-AuthUserFile /homes/rgass/public_html/gatekeeper/.htpasswd
-#AuthUserFile /home/rgass/public_html/dermweb/results/.htpasswd
+AuthUserFile /root/.htpasswd
 AuthGroupFile /dev/null
 AuthName "GateKeeper"
 AuthType Basic
