Added registration of gatekeeper/scope file mimetypes

--- a/src/lib/libscope/Makefile.am
+++ b/src/lib/libscope/Makefile.am
@@ -1,6 +1,9 @@
 noinst_LTLIBRARIES = libscope.la
 dist_bin_SCRIPTS = newscope
 
+install-exec-hook:
+	desktop-file-install --rebuild-mime-info-cache --vendor diamond scope.desktop
+
 libscope_la_SOURCES = lib_scope.c
 
 pkginclude_HEADERS = lib_scope.h
