--- a/src/lib/libscope/scope.desktop
+++ b/src/lib/libscope/scope.desktop
@@ -3,6 +3,6 @@ Version=1.0
 Type=Application
 Encoding=UTF-8
 Name=Diamond Scope Handler
-Exec=newscope %f
+Exec=diamond-newscope %f
 Icon=gnome-terminal.png
 MimeType=application/x-diamond-scope;
