Try to install desktop file locally if global install fails

--- a/src/lib/libscope/Makefile.am
+++ b/src/lib/libscope/Makefile.am
@@ -2,7 +2,9 @@ noinst_LTLIBRARIES = libscope.la
 dist_bin_SCRIPTS = diamond-newscope
 
 install-exec-hook:
-	desktop-file-install --rebuild-mime-info-cache --vendor diamond scope.desktop
+	desktop-file-install --rebuild-mime-info-cache --vendor diamond scope.desktop \
+	|| desktop-file-install --dir $$HOME/.local/share/applications --rebuild-mime-info-cache --vendor diamond scope.desktop
+
 
 libscope_la_SOURCES = lib_scope.c
 
