Fix up automake DIST rules

--- a/src/lib/libfilterexec/Makefile.am
+++ b/src/lib/libfilterexec/Makefile.am
@@ -8,4 +8,6 @@ libfilterexec_la_SOURCES = filter_exec.c filter_spec.l fexec_stats.c \
 	fexec_history.c filter_priv.h fexec_stats.h fexec_opt.h \
 	fexec_history.h ocache_priv.h
 
+CLEANFILES = filter_spec.c
+
 pkginclude_HEADERS = lib_filterexec.h lib_ocache.h
