--- a/src/lib/libdconfig/Makefile.am
+++ b/src/lib/libdconfig/Makefile.am
@@ -5,6 +5,8 @@ noinst_LTLIBRARIES = libdconfig.la
 libdconfig_la_SOURCES = group_lookup.l name_lookup.l diamond_config.l \
 	dconfig_tools.c gid_map.h dconfig_priv.h name_map.h
 
+CLEANFILES = group_lookup.c name_lookup.c diamond_config.c
+
 pkginclude_HEADERS = lib_dconfig.h
 
 
