--- a/src/lib/libodisk/Makefile.am
+++ b/src/lib/libodisk/Makefile.am
@@ -4,6 +4,8 @@ noinst_LTLIBRARIES = libodisk.la
 
 libodisk_la_SOURCES = odisk.c read_text_attr.l obj_attr.c odisk_priv.h
 
+CLEANFILES = read_text_attr.c
+
 pkginclude_HEADERS = lib_odisk.h obj_attr.h
 
 noinst_PROGRAMS = odisk_test attr_test odisk_idx del_obj odisk_setoid
