Move test code into new tests directory
Because tests sometimes need code from libraries other than
where they are built, they should be in a different place than
under lib. Then they can include libopendiamond.la.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = common lib adiskd tools target debian
+SUBDIRS = common lib adiskd tools tests target debian
 
 
 EXTRA_DIST = CREDITS LICENSE INSTALL
