--- a/src/lib/libod/Makefile.am
+++ b/src/lib/libod/Makefile.am
@@ -3,7 +3,7 @@ noinst_LTLIBRARIES = libod.la
 nodist_libod_la_SOURCES = od_clnt.c od_xdr.c
 libod_la_SOURCES = od_api.c od_lookup.c od_priv.h od.x.in lib_od.h.in
 
-noinst_PROGRAMS = od_server otest apitest
+noinst_PROGRAMS = od_server
 
 BUILT_SOURCES = od_clnt.c od_xdr.c od.h od_svc.c
 
@@ -14,13 +14,6 @@ od_server_LDADD = libod.la ../liblog/liblog.la ../libdctl/libdctl.la \
 	../libtools/libtools.la ../libdctl/libdctl.la \
 	${GLIB2_LIBS}
 
-otest_SOURCES = otest.c
-otest_LDADD = libod.la ../libdconfig/libdconfig.la \
-	${GLIB2_LIBS}
-
-apitest_SOURCES = apitest.c
-apitest_LDADD = libod.la ../libdconfig/libdconfig.la \
-	${GLIB2_LIBS}
 
 
 # rpcgen stuff (includes hack for rpcgen's interesting behavior with paths)
