Read cached attributes from ocache database
Reinstates some of the code that was removed when we enabled the
sqlite3 based ocache (548400a4f43d5dd39a04bde5d4f87df5b87f94ea)

--- a/src/lib/libod/Makefile.am
+++ b/src/lib/libod/Makefile.am
@@ -11,6 +11,7 @@ nodist_od_server_SOURCES = od_svc.c
 od_server_SOURCES = od_server.c
 od_server_LDADD = libod.la ../liblog/liblog.la ../libdctl/libdctl.la \
 	../libodisk/libodisk.la ../libdconfig/libdconfig.la \
+	../libfilterexec/libfilterexec.la ../libfilter/libfilter.la \
 	../libtools/libtools.la ../libdctl/libdctl.la \
 	${GLIB2_LIBS}
 
