--- a/src/configure.ac
+++ b/src/configure.ac
@@ -72,7 +72,8 @@ AC_SEARCH_LIBS([pthread_create],
 	[pthread],, AC_MSG_FAILURE([cannot find pthread_create function]))
 AC_SEARCH_LIBS([OpenSSL_add_all_digests],
 	[ssl],, AC_MSG_FAILURE([cannot find ssl function]))
-
+AC_SEARCH_LIBS([clock_gettime],
+	[rt],, AC_MSG_FAILURE([cannot find POSIX clock functions]))
 
 
 # some options and includes
