--- a/src/lib/libauth/Makefile.am
+++ b/src/lib/libauth/Makefile.am
@@ -1,5 +1,10 @@
 noinst_LTLIBRARIES = libauth.la
 
-libauth_la_SOURCES = lib_auth.c lib_auth_priv.h
+libauth_la_SOURCES =
+if HAVE_KRB5
+libauth_la_SOURCES += lib_auth.c lib_auth_priv.h
+else
+libauth_la_SOURCES += lib_noauth.c
+endif
 
 pkginclude_HEADERS = lib_auth.h
